@@ -5,10 +5,14 @@
 		- Toggling the numeric fields or closing the windows will reset the field to the most recently successfully parsed value.
 		- The text will still be updated if the parsed value becomes clamped within the limits of the field.
 	- Make the delay for the "read and interpret" logic of numeric input fields customisable (default 0.5s).
+- AI:
+	- Some QoL improvements for auto-tuning: automatically enable AI and engines and move the craft to the autotuning altitude.
 - Detectors:
 	- Fix Conformal Decals throwing off RCS calculation in editor (SPH/VAB).
 	- Add for/aft/side/top/bot RCS readout to the On-Screen Telem debug option when ASPECTED_RCS is enabled.
-
+- Competition:
+	- Fix a bug in the score window for teams competitions.
+	- Automatically enable the teams score toggle in the score window if the "Teams" slider in the vessel spawner window is set to teams mode on start-up.
 
 v1.6.4.0
 IMPROVEMENTS / FIXES
